# socketftp

./: .gitignore  CMakeLists.txt  README  setup.py  wrapper.c
include/: header.h
pysocketftp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: ftp.c
